# magic-circle-backend

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 2b164321f7f1_init.py  cd46828bfd2b_rarity_special.py
dev-assets/: docker-compose.db.yaml  docker-compose.redis.yaml  example-manabox-collection.csv  example-manabox-collection2.csv  generate-openapi-client
magic_circle/: app.py  common.py  config.py  deps.py  exceptions.py  factory.py  repo.py  requests.py  run_backend.py  run_try.py
magic_circle/card/: bases.py  db.py  parser.py  repo.py  requests.py  responses.py  routes.py
magic_circle/circle/: bases.py  db.py  repo.py  routes.py
magic_circle/health/: routes.py
magic_circle/scryfall/: __init__.py
magic_circle/user/: db.py  deps.py  repo.py  requests.py  responses.py  routes.py
magic_circle/user_session/: bases.py  db.py  repo.py  responses.py
magic_circle/utils/: __init__.py  ratelimiter.py  utils.py
